<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hp.testproject.ContentProviderExample">


    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="551dp"
        >
        <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name" />

        <EditText
        android:id="@+id/birthday"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name"
        android:layout_below="@+id/name"
        android:ems="10"
        android:hint="@string/birthday" />

        <Button
        android:id="@+id/btnAdd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="addBirthday"
        android:layout_alignLeft="@+id/birthday"
        android:layout_below="@+id/birthday"
        android:layout_marginTop="30dp"
        android:text="@string/add" />

        <Button
        android:id="@+id/btnShow"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnAdd"
        android:layout_below="@+id/btnAdd"
        android:layout_marginTop="20dp"
        android:onClick="showAllBirthdays"
        android:text="@string/show" />

        <Button
        android:id="@+id/btnDelete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnShow"
        android:layout_alignLeft="@+id/btnShow"
        android:layout_marginTop="20dp"
        android:onClick="deleteAllBirthdays"
        android:text="@string/delete" />


    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
